# paygate-africa

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-cd.yml  docs.yml
docs/: index.md
docs/examples/: custom-transaction.md
docs/guide/: add-provider.md
docs/reference/: base.md  cinetpay.md  kkiapay.md  utils.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/examples/: basic-usage.md  custom-transaction.md
documentation/docs/guide/: add-provider.md  getting-started.md
documentation/docs/providers/: cinetpay.md  kkiapay.md
documentation/docs/reference/: base.md  factory.md
examples/: 01_basic_usage.py  02_custom_transaction.py  README.md
examples/03_add_new_provider/: __init__.py  client.py  factory_update.py  settings.py
examples/basic-usage/: index.html
examples/custom-transaction/: index.html
guide/add-provider/: index.html
guide/getting-started/: index.html
providers/cinetpay/: index.html
providers/kkiapay/: index.html
reference/base/: index.html
reference/cinetpay/: index.html
reference/factory/: index.html
reference/kkiapay/: index.html
reference/utils/: index.html
search/: search_index.json
src/paygate/: __init__.py  factory.py
src/paygate/cinetpay/: settings.py
src/paygate/kkiapay/: settings.py
src/paygate_africa/: __init__.py  base.py  factory.py  utils.py
src/paygate_africa/cinetpay/: client.py  settings.py
src/paygate_africa/kkiapay/: client.py  settings.py
tests/: test_base.py  test_cinetpay.py  test_factory.py  test_kkiapay.py
