[tool.poetry]
name = "paygate-africa"
version = "0.1.1"
description = "Abstraction unifiée des passerelles de paiement africaines (CinetPay, Kkiapay...) - Zéro dépendance externe."
authors = ["flavien-hugs"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/flavien-hugs/paygate-africa"
repository = "https://github.com/flavien-hugs/paygate-africa"
keywords = ["payment", "checkout", "cinetpay", "kkiapay", "benin", "ivory-coast", "africa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "paygate_africa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^1.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
ruff = "^0.15.9"
python-semantic-release = "^10.5.3"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["paygate_africa"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
